--- a/widevine_config.json
+++ b/widevine_config.json
@@ -1,1 +1,6 @@
-
+[
+  "/opt/google/chrome/WidevineCdm",
+  "/opt/google/chrome-beta/WidevineCdm",
+  "/opt/google/chrome-unstable/WidevineCdm",
+  "/home/you-username/.config/opera/WidevineCdm/4.10.1610.0"
+]
